# vyapari-ai

./: .gitignore  ARCHITECTURE.md  BLOG_POST.md  CLAUDE.md  README.md  VIDEO_SCRIPT.md  app.py  blog.html  pitch.html  pyproject.toml  requirements.txt  video.html
agents/: app.py  catalog_agent.py  intelligence_agent.py  onboarding_agent.py  order_agent.py  supervisor.py  voice_agent.py
agents/prompts/: catalog_prompt.py  onboarding_prompt.py  order_prompt.py  supervisor_prompt.py  voice_prompt.py
agents/tools/: barcode_tools.py  bedrock_tools.py  dynamodb_tools.py  intelligence_tools.py  invoice_tools.py  ondc_protocol.py  ondc_tools.py  order_tools.py  polly_tools.py  product_database.py  s3_tools.py  seed_db_tools.py  transcribe_tools.py  translate_tools.py
api/: main.py
api/routes/: catalog.py  chat.py  demo.py  health.py  intelligence.py  simulate.py  template.py  upload.py  voice.py
api/services/: agent_service.py  intelligence_service.py
data/: vyapari_seed_db_v2.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentActivityPanel.tsx  BuyerCatalogView.tsx  BuyerSimulator.tsx  ChatBubble.tsx  ChatInterface.tsx  ConfettiAnimation.tsx  DemoGuide.tsx  FeeBreakdownCard.tsx  IntelligenceCard.tsx  LandingPage.tsx  LanguageToggle.tsx  (+9 more)
infrastructure/: .env.example  dynamodb_tables.py  iam_roles.py
scripts/: seed_demo_data.py  simulate_orders.py  test_aws.py  test_catalog.py  test_deployment.sh  test_e2e.py  test_onboarding.py  test_orders.py  test_supervisor.py  test_voice.py
(+5 files in other folders)
